# tour-analytics-dashboard

./: .gitignore  LICENSE  README.md  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/api/records/: route.ts
app/api/upload/: route.ts
app/api/upload-text/: route.ts
app/api/uploads/: route.ts
components/: Charts.tsx  Dashboard.tsx  DataTable.tsx  DateRangePicker.tsx  FileUpload.tsx  StatsCards.tsx  ThemeToggle.tsx
components/charts/: CategoryDistributionChart.tsx  MonthlyRevenueChart.tsx  TopToursChart.tsx  chart-utils.tsx  index.ts
components/ui/: alert-dialog.tsx  badge.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  textarea.tsx
lib/: api.ts  db.ts  logger.ts  parseOds.ts  parseText.ts  timezone.ts  types.ts  utils.ts
scripts/: prepare-standalone.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/loading/: index.html
src-tauri/src/: lib.rs  main.rs
