[package]
name = "tour-analytics-dashboard"
version = "1.1.0"
description = "Tour Analytics Dashboard"
authors = ["holdingq0"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tour_analytics_dashboard_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
